SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <label>Booking</label>
    <nameField>
        <displayFormat>BKN-{0000}</displayFormat>
        <label>Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>