SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Booking__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>