SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Booking__c/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <label>Facilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Seat_Class__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Snacks</fullName>
            </value>
            <value>
                <fullName>Water Bottle</fullName>
            </value>
            <value>
                <fullName>Standard Seat</fullName>
            </value>
            <value>
                <fullName>Paid WiFi</fullName>
            </value>
            <value>
                <fullName>Lounge Access</fullName>
            </value>
            <value>
                <fullName>Extra Legroom</fullName>
            </value>
            <value>
                <fullName>Premium Meals</fullName>
            </value>
            <value>
                <fullName>Priority Boarding</fullName>
            </value>
            <value>
                <fullName>Free WiFi</fullName>
            </value>
            <value>
                <fullName>Private Suite</fullName>
            </value>
            <value>
                <fullName>Lie-flat Bed</fullName>
            </value>
            <value>
                <fullName>Luxury Dining</fullName>
            </value>
            <value>
                <fullName>Chauffeur Service</fullName>
            </value>
            <value>
                <fullName>Unlimited WiFi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>