SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Booking__c/fields/Journey_Date__c.field-meta.xml
<CustomField>
    <fullName>Journey_Date__c</fullName>
    <label>Journey Date</label>
    <type>Date</type>
</CustomField>