SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Booking__c/fields/Paying_Fare_With_Gst__c.field-meta.xml
<CustomField>
    <fullName>Paying_Fare_With_Gst__c</fullName>
    <label>Paying Fare With Gst</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>